Added time blocks, added current day to top of calendar

--- a/index.html
+++ b/index.html
@@ -29,10 +29,73 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <!-- Timeblocks here -->
+      <div class="row">
+        <div class="col-1 hour">9 A.M.</div>
+        <textarea class="col-10 future"></textarea>
+        <button class="col-1 saveBtn" id="9">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+      <div class="row">
+        <div class="col-1 hour">10 A.M.</div>
+        <textarea class="col-10 future"></textarea>
+        <button class="col-1 saveBtn" id="10">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+      <div class="row">
+        <div class="col-1 hour">11 A.M.</div>
+        <textarea class="col-10 future"></textarea>
+        <button class="col-1 saveBtn" id="11">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+      <div class="row">
+        <div class="col-1 hour">12 P.M.</div>
+        <textarea class="col-10 future"></textarea>
+        <button class="col-1 saveBtn" id="12">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+      <div class="row">
+        <div class="col-1 hour">1 P.M.</div>
+        <textarea class="col-10 future"></textarea>
+        <button class="col-1 saveBtn" id="1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+      <div class="row">
+        <div class="col-1 hour">2 P.M.</div>
+        <textarea class="col-10 future"></textarea>
+        <button class="col-1 saveBtn" id="2">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+      <div class="row">
+        <div class="col-1 hour">3 P.M.</div>
+        <textarea class="col-10 future"></textarea>
+        <button class="col-1 saveBtn" id="3">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+      <div class="row">
+        <div class="col-1 hour">4 P.M.</div>
+        <textarea class="col-10 future"></textarea>
+        <button class="col-1 saveBtn" id="4">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+      <div class="row">
+        <div class="col-1 hour">5 P.M.</div>
+        <textarea class="col-10 future"></textarea>
+        <button class="col-1 saveBtn" id="5">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
     </div>
-
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
