--- a/index.html
+++ b/index.html
@@ -31,65 +31,65 @@
     <div class="container">
       <!-- Timeblocks here -->
       <div class="row">
-        <div class="col-1 hour">9 A.M.</div>
-        <textarea class="col-10 future"></textarea>
-        <button class="col-1 saveBtn" id="9">
+        <div class="col-1 time-block hour">9 A.M.</div>
+        <textarea id="9" class="description col-10"></textarea>
+        <button class="col-1 saveBtn" id="btn9">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
-        <div class="col-1 hour">10 A.M.</div>
-        <textarea class="col-10 future"></textarea>
-        <button class="col-1 saveBtn" id="10">
+        <div class="col-1 time-block hour">10 A.M.</div>
+        <textarea id="10" class="description col-10"></textarea>
+        <button class="col-1 saveBtn" id="btn10">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
-        <div class="col-1 hour">11 A.M.</div>
-        <textarea class="col-10 future"></textarea>
-        <button class="col-1 saveBtn" id="11">
+        <div class="col-1 time-block hour">11 A.M.</div>
+        <textarea id="11" class="description col-10"></textarea>
+        <button class="col-1 saveBtn" id="btn11">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
-        <div class="col-1 hour">12 P.M.</div>
-        <textarea class="col-10 future"></textarea>
-        <button class="col-1 saveBtn" id="12">
+        <div class="col-1 time-block hour">12 P.M.</div>
+        <textarea id="12" class="description col-10"></textarea>
+        <button class="col-1 saveBtn" id="btn12">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
-        <div class="col-1 hour">1 P.M.</div>
-        <textarea class="col-10 future"></textarea>
-        <button class="col-1 saveBtn" id="1">
+        <div class="col-1 time-block hour">1 P.M.</div>
+        <textarea id="13" class="description col-10"></textarea>
+        <button class="col-1 saveBtn" id="btn1">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
-        <div class="col-1 hour">2 P.M.</div>
-        <textarea class="col-10 future"></textarea>
-        <button class="col-1 saveBtn" id="2">
+        <div class="col-1 time-block hour">2 P.M.</div>
+        <textarea id="14" class="description col-10"></textarea>
+        <button class="col-1 saveBtn" id="btn2">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
-        <div class="col-1 hour">3 P.M.</div>
-        <textarea class="col-10 future"></textarea>
-        <button class="col-1 saveBtn" id="3">
+        <div class="col-1 time-block hour">3 P.M.</div>
+        <textarea id="15" class="description col-10"></textarea>
+        <button class="col-1 saveBtn" id="btn3">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
-        <div class="col-1 hour">4 P.M.</div>
-        <textarea class="col-10 future"></textarea>
-        <button class="col-1 saveBtn" id="4">
+        <div class="col-1 time-block hour">4 P.M.</div>
+        <textarea id="16" class="description col-10"></textarea>
+        <button class="col-1 saveBtn" id="btn4">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
-        <div class="col-1 hour">5 P.M.</div>
-        <textarea class="col-10 future"></textarea>
-        <button class="col-1 saveBtn" id="5">
+        <div class="col-1 time-block hour">5 P.M.</div>
+        <textarea id="17" class="description col-10"></textarea>
+        <button class="col-1 saveBtn" id="btn5">
           <i class="fas fa-save"></i>
         </button>
       </div>
