--- a/index.html
+++ b/index.html
@@ -31,65 +31,65 @@
     <div class="container">
       <!-- Timeblocks here -->
       <div class="row">
-        <div class="col-1 time-block hour">9 A.M.</div>
+        <div class="time-block col-1 hour">9 A.M.</div>
         <textarea id="9" class="description col-10"></textarea>
-        <button class="col-1 saveBtn" id="btn9">
+        <button class="col-1 saveBtn">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
-        <div class="col-1 time-block hour">10 A.M.</div>
+        <div class="time-block col-1 hour">10 A.M.</div>
         <textarea id="10" class="description col-10"></textarea>
-        <button class="col-1 saveBtn" id="btn10">
+        <button class="col-1 saveBtn">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
-        <div class="col-1 time-block hour">11 A.M.</div>
+        <div class="time-block col-1 hour">11 A.M.</div>
         <textarea id="11" class="description col-10"></textarea>
-        <button class="col-1 saveBtn" id="btn11">
+        <button class="col-1 saveBtn">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
-        <div class="col-1 time-block hour">12 P.M.</div>
+        <div class="time-block col-1 hour">12 P.M.</div>
         <textarea id="12" class="description col-10"></textarea>
-        <button class="col-1 saveBtn" id="btn12">
+        <button class="col-1 saveBtn">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
-        <div class="col-1 time-block hour">1 P.M.</div>
+        <div class="time-block col-1 hour">1 P.M.</div>
         <textarea id="13" class="description col-10"></textarea>
-        <button class="col-1 saveBtn" id="btn1">
+        <button class="col-1 saveBtn">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
-        <div class="col-1 time-block hour">2 P.M.</div>
+        <div class="time-block col-1 hour">2 P.M.</div>
         <textarea id="14" class="description col-10"></textarea>
-        <button class="col-1 saveBtn" id="btn2">
+        <button class="col-1 saveBtn">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
-        <div class="col-1 time-block hour">3 P.M.</div>
+        <div class="time-block col-1 hour">3 P.M.</div>
         <textarea id="15" class="description col-10"></textarea>
-        <button class="col-1 saveBtn" id="btn3">
+        <button class="col-1 saveBtn">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
-        <div class="col-1 time-block hour">4 P.M.</div>
+        <div class="time-block col-1 hour">4 P.M.</div>
         <textarea id="16" class="description col-10"></textarea>
-        <button class="col-1 saveBtn" id="btn4">
+        <button class="col-1 saveBtn">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
-        <div class="col-1 time-block hour">5 P.M.</div>
+        <div class="time-block col-1 hour">5 P.M.</div>
         <textarea id="17" class="description col-10"></textarea>
-        <button class="col-1 saveBtn" id="btn5">
+        <button class="col-1 saveBtn">
           <i class="fas fa-save"></i>
         </button>
       </div>
